Added JWT based authentication
